--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "AGSB Publications Committee Mentoring"
+title: "Publications Mentoring"
 remote_theme: pmarsceill/just-the-docs
 color_scheme: "dark"
-search_enabled: false
+search_enabled: true
